# flalog

./: .gitignore  LICENSE  README.md  pyproject.toml
flalog/: app.py  user.py
flalog/templates/: login.html  login_success.html  logout_success.html
